<resources>
    <string name="app_name">gramswaraj</string>
    <string name="mr_narendra_mode">Mr. Narendra Mode</string>
    <string name="hon_shri_narendra_modi">Hon. Shri. Narendra Modi</string>
    <string name="prime_minister_of_india">Prime Minister of India</string>
    <string name="prime_minister_india">Prime Minister, India</string>
    <string name="hon_shri_uddhav_thackerey">Hon. Shri. Uddhav Thackerey</string>
    <string name="chief_minister_maharashtra">Chief Minister, Maharashtra</string>
    <string name="hon_shri_hasan_mushrif">Hon.Shri.Hasan Mushrif</string>
    <string name="minister_rural_development_department_maharashtra">Minister, Rural Development Department, Maharashtra</string>
    <string name="title_activity_google_sign_in">GoogleSignInActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="kandali_village_is_located_in_achalpur_tehsil_of_amravati_district_in_maharashtra_india_it_is_situated_12km_away_from_sub_district_headquarter_achalpur_tehsildar_office_and_55km_away_from_district_headquarter_amravati_kandali_village_comes_under_melghat_assembly_constituency_and_amravati_parliamentary_constituency_n_n_read_more">Kandali village is located in Achalpur tehsil of Amravati district in Maharashtra, India. It is situated 12km away from sub-district headquarter Achalpur (tehsildar office) and 55km away from district headquarter Amravati. Kandali village comes under Melghat assembly constituency and Amravati parliamentary constituency. \n\n Read More...</string>
    <string name="track_application">Track Application</string>
    <string name="govt_schemes_yojna">Govt. Schemes (Yojna)</string>
    <string name="apply_certificate">Apply certificate</string>
</resources>